# 2021autumC-

./: .gitignore  CMakeLists.txt
HW1/: HW1_0811074.cpp
HW2/: hw2_0811074_main.cpp  hw2_alternative.cpp  hw2_lib.cpp  hw2_lib.h
kendo/: CMakeLists.txt  main.cpp  程式設計期末專題.pptx
kendo/data/: database.json
kendo/lib/member/: kendo.cpp  kendo.h  member.cpp  member.h
kendo/output/: output.csv
midterm_practice/: week1_1.cpp  week1_2.cpp  week1_3.cpp  week1_4.cpp
midterm_week1/: 0811074_Q1.cpp  0811074_Q2.cpp  0811074_Q2lib.cpp  0811074_Q2lib.h  0811074_Q3.cpp  0811074_Q4.cpp
week1/: fun.c
week1/src/helloworld/: helloworld.depend  helloworld.layout  main.cpp
week10/: openfile1.cpp  openfile2.cpp  rand_generator.cpp  rand_reader.cpp  xml_generator.cpp
week11/: myRobot.cpp  myRobot.h  robot_main.cpp
week2/: max.cpp  pass by value.cpp  reference.cpp  week2_practice1.cpp
week3/: LowerToUpper.cpp  add.cpp  hw.cpp  pointer.cpp  random.cpp
week4/: array_max.cpp  log.cpp  pointer_array.cpp  power.cpp  sum.cpp
week6/: multilibrary.cpp  multilibrary.h  multimain.cpp  stringcompare.cpp  struct.cpp  studentGradeMain.cpp  studentlib.cpp  studentlib.h
week7/: practice1.cpp  practice2.cpp
week8/: cbox.cpp  triangle_main.cpp  trianglelib.cpp  trianglelib.h
week9/: studentScorelib.cpp  studentScorelib.h  studentmain.cpp  triangle_class.cpp  triangle_classlib.cpp  triangle_classlib.h
教材/: GIT.pptx
